--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "extension"
   ],
   "author": "Emmanuel Joubaud",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0"
+  }
 }
