--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cypress/base:6
+      - image: cypress/browsers
         environment:
           ## this enables colors in the output
           TERM: xterm
