--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-import": "^2.10.0"
   },
   "dependencies": {
+    "chokidar": "^2.0.3",
     "fs-extra": "^5.0.0",
     "nanoid": "^1.0.2"
   }
