Make loader function async

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
     "rules": {
         "prefer-arrow-callback": [ "error", { "allowNamedFunctions": true } ],
         "no-console": "off",
-        "object-curly-newline": [ "error", { "ObjectPattern": { "multiline": true } } ]
+        "object-curly-newline": [ "error", { "ObjectPattern": { "multiline": true } } ],
+        "function-paren-newline": [ "error", "consistent" ]
     },
     "plugins": [
         "cypress"
