--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "chokidar": "^2.0.3",
     "fs-extra": "^5.0.0",
-    "nanoid": "^1.0.2"
+    "nanoid": "^1.0.2",
+    "unzip-crx": "^0.2.0"
   }
 }
